--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,80 @@
+body {
+  background: url("../images/outerspace_landscape.jpeg") no-repeat;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
 
+}
+
+nav {
+  background-color: #808080;
+  padding-left: 83px;
+  padding-top: 5px;
+  padding-bottom: 6px;
+  position: fixed;
+  width: 100%;
+}
+
+nav ul  {
+  list-style-type: none;
+  float: left;
+}
+
+nav ul li {
+  display: inline-block;
+}
+
+nav li a {
+    color: #000000;
+    text-decoration: none;
+}
+
+
+nav li a:after {
+	content: "|";
+	margin-left: 8px;
+}
+
+
+.black-kittie {
+  max-width: 5%;
+  border-radius: 36px;
+  border: 1px solid #000;
+  float: left;
+}
+
+/*main {
+  background: url("../images/outerspace_landscape.jpeg") no-repeat;
+}*/
+
+.pets {
+  width: 600px;
+  height: 300px;
+  margin: 0 auto;
+  border:  10px dotted green;
+  position: relative;
+  top: 254px;
+
+}
+
+.kittie ,
+ .doggie {
+  display: block;
+  position: absolute;
+}
+
+
+.kittie {
+  left: -101px;
+  float: left;
+  width: 200px;
+  margin-right: 14px;
+  bottom: 222px;
+}
+
+.doggie {
+  right: 0;
+  bottom: 0;
+  top: 63%;
+  left: 78%;
+}
