--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,19 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.img-1 {
+  display: block;
+  width: 39%;
+  float: left;
+  padding: 14px;
+  clear: right;
+}
+
+
+.img-2 {
+  display: block;
+  width: 38%;
+  float: right;
+  padding: 14px;
+}
